cv.css
/* ... */
.school-item2 .school-description ul li{
    border: 2px solid #000000;
    background-color: rgba(255, 255, 255, 0.489);
    padding: 6px;
    border-radius: 10px;
    list-style: none;

}
.school-item2 img{
    position: relative;
    width: 25vh;
    height: 20vh;
    left: 180px;
    border-radius: 10px;
}
.school-item2 h4{
    text-align: center;
    margin-bottom: 10px;
}
footer {
    background-color: rgba(192, 191, 191, 0.481);
    position: absolute;
    color: #e9e0e0;
    left: 90%;
    bottom: 12px;
    border-radius: 10px;
    box-shadow: 0 1px 4px rgba(255, 255, 255, 0.747);
    transition: all ease-in-out 0.4s;
}
.footer-content{
    width: 120px;
    height: 35px;
    padding: 6px;
    text-align: center;
}
.footer-content a{
    color: #650707;
    width: 120px;
    height: 35px;
    font-size: 14px;

}
footer:hover{
    border: 1px solid #591212;
    box-shadow: 0 2px 6px rgba(255, 255, 255, 0.747);
    transition: all ease-in-out 0.4s;
}
footer:hover a{
    color: #120c13;
    transition: all ease-in-out 0.4s;
}
footer:active{
    box-shadow: 0px 0px 0px 0px;
}
@media (min-width:320px) and (max-width:499px) {
    html{
        font-size: 60%;
    }
    body{
        min-width: 320px;
        background-image: url(img-portfolio2/pexels-adrien-olichon-mobile1.jpg);
        background-size: cover;
        background-position: center; 
        background-repeat: no-repeat;
        background-attachment: fixed;
    }
    nav{
        min-width: 320px;
        max-height: 100px;
        padding: 20px 5px;
        display: inline-flex;
    }
    nav ul{
        display: inline;
        
    }
    nav ul li{
        padding: 8px 15px ;
        font-size: 90%;
        
    }
    .logo{
        max-width: 6vh;
        max-height: 6vh;
        margin-right: 10px;
    } 
    .btn{
        position: relative;
        padding: 6px 12px;
        font-size: 10px;
        margin-left: 6px;
    }
    .cv-items{
        max-width: 320px;
    }
    .current-wish h2{
        font-size: 100%;
        text-align: center;
        margin-top: 40px;
        margin-left:40px;
        
    }
    .link-school{
        width: 210px;
        height: 35px;
        padding: 6px;
    }
    .link-school a{
        font-size: 100%;
    }
    .link-school:hover{
        width: 211px;
        height: 36px;
        padding: 6px;
    }
    .cv-introduction{
        left: 25px;
        top: 40px;
        width: 300px;
    }
    .cv-introduction h1{
        font-size: 110%;
    }
    .cv-introduction h2{
        font-size: 110%;
        padding: 20px;
        font-style: italic;
    }
    .cv-itself{
        width: 310px;
        left: 20px;
        top: 100px;
        margin-bottom: 80px;
    }
    .exp-content .exp-title{
        font-size: 120%; 
        margin-bottom: 10px;
    }
    .exp-items1{
        margin-top: 30px;
        width: 300px;
        height: 450px;
        left: 0px;
    }
    .exp-items1 .exp-description{
        width: 300px;
        top: 10px;
        left: -15px;
    }
    .exp-items1 .exp-description h3{
        font-size: 120%;
    }
    .exp-items1 .exp-description p{
        margin-top: 10px;
        text-align: justify;
        font-size: 110%;
        width: 300px;
    }
    .exp-items1 .exp-description ul{
        top: 15px;
        
    }
    .exp-items1 .exp-description ul li{
        padding: 3px;
        width: 70px;
    }
    .exp-items1 img{
        width: 10vh;
        height: 10vh;
    }
    .exp-items2{
        display: block;
        margin-top: 30px;
        max-width: 300px;
        height: 450px;
        left: 0px;
    }
    .exp-items2 .exp-description{
        width: 300px;
        top: -160px;
        left: -15px;
    }
    .exp-items2 .exp-description h3{
        font-size: 120%;
    }
    .exp-items2 .exp-description p{
        margin-top: 10px;
        text-align: justify;
        font-size: 110%;
        width: 300px;
    }
    .exp-items2 .exp-description ul{
        top: 15px; 
    }
    .exp-items2 .exp-description ul li{
        padding: 3px;
        width: 70px;
    }
    .exp-items2 img{
        width: 10vh;
        height: 10vh;
    }
    .school-content{
        width: 300px;
        left: 10px;
    }
    .school-content .school-title{
        margin-top: 125px;
        font-size: 120%; 
    }
    .school-items {
        display: block;
    }
    .school-item1{
        width: 300px;
        height: 850px;
        padding: 20px;
        margin-left: 0px;
    }
    .school-item1 h4{
        font-size: 120%;
    }
    .school-item1 h6{
        font-size: 110%;
    }
    .school-description h3{
        font-size: 120%;
    }
    .school-description p{
        font-size: 110%;
    }
    .school-item1 .school-description ul li{
        margin-top: 10px;
    }
    .school-item1 img{
        width: 15vh;
        height: 10vh;
        left: 85px;
    }
    .maetris-content h5{
        font-size: 120%;
    }
    .school-item2{
        width: 300px;
        height: 700px;
        padding: 20px;
        margin-left: 0px;
        border-left: 2px solid #cecacab0;
    }
    .school-item2 h4{
        font-size: 120%;
    }
    .school-item2 h6{
        font-size: 110%;
    }
    .school-item2 img{
        width: 15vh;
        height: 10vh;
        left: 90px;
    }
    footer {
        left: 70%;
        bottom: -5px;
    }
    .footer-content{
        width: 90px;
        height: 25px;
        padding: 6px;
    }
    .footer-content a{
        width: 110px;
        height: 30px;
        font-size: 110%;
    
    }
}

